--- a/inst/doc/fishergen.bib
+++ b/inst/doc/fishergen.bib
@@ -396,8 +396,11 @@
     title = {\pkg{Hyperdirichlet}: A Generalization of the Dirichlet Distribution},
     author = {R. K. S. Hankin},
     year = {2008},
-    note = {\proglang{R} package version 1.0-2; paper submitted to Journal of Statistical Software and currently under review}
+    note = {\proglang{R}~package version~1.1-5 available on CRAN; paper submitted to Journal of Statistical Software and currently under review},
+    url =  {http://cran.r-project.org/}
 }
+
+
 
 @Manual{rcore2008,
     title = {\proglang{R}: A Language and Environment for Statistical Computing},
@@ -437,3 +440,12 @@
   month =	 {December}
 }
 
+ @Article{west2008,
+  title = {Exact Tests for Two-Way Contingency Tables with Structural Zeros},
+  author = {Luke J. West and Robin K. S. Hankin},
+  journal = {Journal of Statistical Software},
+  year = {2008},
+  volume = {28},
+  number = {11},
+  url = {http://www.jstatsoft.org/v28/i11/}
+ }
